--- a/routes/verificationSuccess.html
+++ b/routes/verificationSuccess.html
@@ -1,13 +1,13 @@
 <style>
     h1{
-        color: #00b4d8;
+        color: #7300e6;
         font-family: Georgia;
         text-align:center;
     }
     body{
         mix-blend-mode: multiply;
         background-color: #ffffff;
-        color: #48cae4;
+        color: #7300e6;
         font-family: Georgia;
         text-align:center;
     }
